<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_base_price"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvBasePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/hint_base_price"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/highest_bid"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvHighestBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/your_bid"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etUserBid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edittext_default"
        android:hint="@string/hint_bid_amount"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bid_notes"
        android:textSize="15sp" />
    
    <EditText
        android:id="@+id/etBidNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_edittext_default"
        android:hint="@string/hint_bid_notes"
        android:inputType="text"
        android:maxLength="255"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_submit"
        android:textSize="18sp" />

</LinearLayout>