<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_default"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/ibTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:background="@drawable/bg_edittext_default"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_new_picture" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ivItem"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                android:visibility="gone" />
        </RelativeLayout>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext_default"
            android:hint="@string/hint_description"
            android:inputType="text"
            android:maxLength="255"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etBasePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext_default"
            android:hint="@string/hint_base_price"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:text="@string/hint_bid_starts"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etBidStartsAtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_default"
                android:focusable="false"
                android:hint="@string/hint_bid_starts_on1"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/etBidStartsAtTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_default"
                android:focusable="false"
                android:hint="@string/hint_bid_starts_on2"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:text="@string/lb_bid_closes_in"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spBidClosing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/bid_closing" />

        <Button
            android:id="@+id/btnSubmitAuction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/btn_create_auction" />
    </LinearLayout>

</ScrollView>